Mobile z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -1096,7 +1096,7 @@ iframe {
   padding: 10px;
   box-shadow: 0 -5px 20px rgba(0,0,0,0.1);
   display: none;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .sticky-cta .btn {
